doc: crate create and git doc change

--- a/docs/工程创建及提交流程.md
+++ b/docs/工程创建及提交流程.md
@@ -1,21 +1,47 @@
+## 使用模板克隆工程
 
-## Windows 中换行符解决
-### 全局配置
 ```sh
-git config --global core.autocrlf true
+cargo generate kailanyue/template
 ```
 
-### 本地项目配置
-```sh
-git config --local core.autocrlf true
+## 修改工程名
+
+```toml
+[package]
+name = "template"
+version = "0.1.0"
+authors = ["kailan yue <yuekailan@gmail.com>"]
+edition = "2021"
 ```
-## 添加作者信息
+
+## git 配置
+
+### 添加作者信息
 ```sh
 git config --local user.name "kailanyue"
 git config --local user.email "yuekailan@163.com"
 ```
 
-## git 提交流程
+### Windows 中换行符解决-全局配置
+```sh
+git config --global core.autocrlf true
+```
+
+### Windows 中换行符解决-本地项目配置
+```sh
+git config --local core.autocrlf true
+```
+
+### pre-commit 配置
+```sh
+# 1.安装 pre-commit
+pre-commit install
+
+# cargo-deny报错failed to open advisory database
+cargo deny check advisories
+```
+
+### git 提交流程
 ```sh
 # 1.cargo fmt 格式化代码
 cargo fmt --check
@@ -24,20 +50,14 @@ cargo fmt .
 # 2.cargo deny 检查
 cargo deny check -d
 
-# cargo-deny报错failed to open advisory database
-cargo deny check advisories
-
-# 3.测试覆盖检查
+# 3.测试覆盖检查，修改单元测试阈值
 cargo tarpaulin --out Html
 
-# 4.安装 pre-commit
-pre-commit install
-
-# 5.修改添加到暂存区
+# 4.修改添加到暂存区
 git add filename
 git add .
 
-# 6.提交
+# 5.提交
 git commit -m "提交内容"
 ```
 
