perf: add Rust development config doc and remove assets file

--- a/docs/工程创建及提交流程.md
+++ b/docs/工程创建及提交流程.md
@@ -43,6 +43,11 @@ cargo deny check advisories
 
 ### git 提交流程
 ```sh
+# 0.修改 cliff 配置
+postprocessors = [
+    { pattern = '\$REPO', replace = "https://github.com/kailanyue/template" }, # replace repository URL
+]
+
 # 1.cargo fmt 格式化代码
 cargo fmt --check
 cargo fmt .
