doc: change doc file

--- a/docs/日志及诊断.md
+++ b/docs/日志及诊断.md
@@ -24,4 +24,7 @@ cargo run ...
 # linux 系统执行命令
 RUST_LOG=debug
 cargo run ...
+
+# tokio-console
+$Env:RUSTFLAGS="--cfg tokio_unstable" cargo build
 ```
