refactor: Refactoring document structure and content

--- a/docs/02.应用安装.md
+++ b/docs/02.应用安装.md
@@ -1,4 +1,4 @@
-### 安装 pre-commit
+### 01.安装 pre-commit
 pre-commit 是一个代码检查工具，可以在提交代码前进行代码检查。
 
 ```bash
@@ -19,18 +19,22 @@ git commit -a
 ```
 安装成功后运行 `pre-commit install` 即可。
 
-### cargo 包安装
+### 02.cargo 包安装
 
 ```bash
+cargo install cargo-binstall
 cargo install cargo-deny --locked
 cargo install cargo-expand
-cargo install cargo-generate
+cargo install cargo-generate --version 0.21.3
 cargo install cargo-machete
 cargo install cargo-nextest --locked
 cargo install cargo-tarpaulin
 cargo install cargo-update
+cargo install cargo-udeps --locked
 cargo install git-cliff
 cargo install sccache
+cargo install create-tauri-app --locked
+cargo install tauri-cli
 cargo install tokei
 cargo install tokio-console --locked
 cargo install typos-cli
@@ -38,8 +42,33 @@ cargo install sqlx-cli --no-default-features --features rustls
 cargo install --git https://github.com/astral-sh/rye rye
 cargo install dioxus-cli
 ```
+### 03.cargo-binstall
 
-#### cargo-expand
+**cargo-binstall 是什么**
+`cargo-binstall` 是一个为 Rust 开发者设计的开源工具，旨在简化 Rust 二进制程序的安装过程。这个工具直接从 `crates.io` 检索 crate 信息，并自动搜索相关发布和艺术品，尝试从仓库链接、快速安装服务直至最终依赖于 `cargo install`，以最少的维护负担和最低的复杂度实现便捷安装。
+
+**如何使用 cargo-binstall**
+1. **安装 cargo-binstall**：
+   首先，确保你已经安装了 Rust 和 Cargo。然后，可以通过 Cargo 来安装 `cargo-binstall`。在命令行中运行以下命令：
+```sh
+cargo install cargo-binstall
+```
+1. **使用 cargo-binstall 安装 Rust 二进制文件**：
+   安装 `cargo-binstall` 后，你可以使用它来安装任何 Rust 包。例如，要安装一个名为 `radio-sx128x` 的包，你可以使用以下命令：
+```sh
+cargo binstall --force rerun-cli@0.19.0
+```
+   这条命令会从 `crates.io` 获取包信息，并在链接的仓库中搜索匹配的发布和艺术品，如果需要，会回退到第三方艺术品托管，最后是作为最后手段的 `cargo install`。
+`cargo-binstall` 的设计目的是为了简化 Rust 生态中二进制程序的安装过程，为开发者提供更加便捷的体验。通过这种方式，开发者可以轻松地下载、安装和管理基于 Cargo 的 Rust 程序。
+
+### 03.cargo-udeps
+查找 Cargo.toml 中的未使用依赖项。
+虽然这个工具的编译也适用于 Rust 稳定版，但实际运行需要 Rust nightly。
+
+```sh
+cargo +nightly udeps
+```
+### 04.cargo-expand
 `cargo-expand` 是一个 Rust 工具，用于展开和查看 Rust 宏的展开结果。它可以帮助开发者理解宏的行为，调试宏相关的问题，以及查看编译器在宏展开后生成的代码。
 
 1. **宏展开**：`cargo-expand` 可以展开宏调用，显示宏展开后的完整代码。这对于理解复杂的宏和调试宏相关的问题非常有用。
@@ -47,16 +76,18 @@ cargo install dioxus-cli
 3. **调试**：当你遇到编译错误或行为异常时，查看宏展开后的代码可以帮助你快速定位问题。
 
 
-### cargo generate
+### 05.cargo generate
 cargo generate 是一个用于生成项目模板的工具。它可以使用已有的 github repo 作为模版生成新的项目。
 
 新的项目会使用 `kailanyue/template` 模版生成基本的代码：
 
 ```bash
 cargo generate kailanyue/template
+# 新版使用此命令
+cargo generate --git git@github.com:kailanyue/template.git
 ```
 
-### Cargo machete
+### 06.Cargo machete
 `cargo-machete` 是一个 Cargo 工具，它以快速（但不精确）的方式检测 Rust 项目中未使用的依赖项
 在包含一个或多个 Rust 项目的目录中运行 cargo-machete（使用 Cargo 进行依赖管理）：
 ```sh
@@ -66,7 +97,7 @@ cd my-directory && cargo machete
 cargo machete /absolute/path/to/my/directory
 ```
 
-### Cargo deny
+### 07.Cargo deny
 Cargo deny 是一个 Cargo 插件，可以用于检查依赖的安全性。
 
 ```bash
@@ -86,11 +117,11 @@ git config --global --get core.autocrlf
 git config --local --get core.autocrlf
 ```
 
-### typos
+### 08.typos
 typos 是一个拼写检查工具。
 
 
-### git cliff
+### 09.git cliff
 git cliff 是一个生成 changelog 的工具。
 
 ```bash
@@ -103,31 +134,31 @@ git-cliff init
 git-cliff -o CHANGELOG.md
 ```
 
-### cargo nextest
-cargo nextest 是一个 Rust 增强测试工具。
+### 10.cargo nextest
+cargo nextest 是一个 Rust 增强测试工具，提供了更好的运行速度
 
 ```bash
 cargo nextest run
 ```
 
-### tokei
+### 11.tokei
 Tokei is a program that displays statistics about your code.
 
 ```bash
 tokei .
 ```
 
-### cargo-tarpaulin
+### 12.cargo-tarpaulin
 在 `.pre-commit-config.yaml` 文件的末尾中添加如下内容：
 
 ```yaml
-      - id: cargo-tarpaulin
-        name: cargo tarpaulin
-        description: unit test for the project
-        entry: bash -c 'cargo tarpaulin --out Html --fail-under 60'
-        language: rust
-        files: \.rs$
-        pass_filenames: false
+- id: cargo-tarpaulin
+name: cargo tarpaulin
+description: unit test for the project
+entry: bash -c 'cargo tarpaulin --out Html --fail-under 60'
+language: rust
+files: \.rs$
+pass_filenames: false
 ```
 > 60 表示覆盖率不能低于 60%
 
@@ -136,7 +167,7 @@ tokei .
 cargo tarpaulin --out Html
 ```
 
-### cargo-update
+### 12.cargo-update
 要更新使用 `cargo install` 安装的包，您可以使用以下方法：
 
 1. **使用 cargo-update 工具**：
@@ -164,7 +195,7 @@ cargo install --list
 ```
   然后根据列表中的包名选择要更新的包。
 
-### cargo 中 locked 参数的含义
+### 13.locked 参数的含义
 `--locked` 是 `cargo install` 命令的一个选项，用于强制使用已打包的 `Cargo.lock` 文件。具体含义如下：
 
 - 默认情况下，`cargo install` 会忽略包含在软件包中的 `Cargo.lock` 文件。这意味着 Cargo 将重新计算要使用的依赖项的版本，可能会使用自发布软件包后发布的较新版本。
