--- a/docs/03.工程管理.md
+++ b/docs/03.工程管理.md
@@ -1,10 +1,11 @@
-## 1 使用模板克隆工程
+## 01.使用模板克隆工程
 
 ```sh
 cargo generate kailanyue/template
+cargo generate --git git@github.com:kailanyue/template.git
 ```
 
-## 2 修改工程名
+## 02.修改工程名
 
 ```toml
 [package]
@@ -14,12 +15,15 @@ authors = ["kailan yue <yuekailan@gmail.com>"]
 edition = "2021"
 ```
 
-## 3 git 配置
+## 03.git 配置
 
 ### 3.1 添加作者信息
 ```sh
 git config --local user.name "kailanyue"
 git config --local user.email "yuekailan@163.com"
+
+git config --global user.name "kailanyue"
+git config --global user.email "yuekailan@163.com"
 ```
 ### 3.2 pre-commit 配置
 ```sh
@@ -69,7 +73,7 @@ git config --global core.autocrlf true
 git config --local core.autocrlf true
 ```
 
-## 4 提交消息前缀
+## 04.提交消息前缀
 在 Git 中，有一些常见的提交消息前缀，可以帮助你更好地描述你的提交。以下是一些常见的前缀：
 
 1. **feat**: 用于引入新功能。例如：`feat: 添加用户登录功能`
@@ -89,7 +93,7 @@ git commit -m "feat: Add new feature XYZ"
 git commit -m "fix: Fix issue ABC"
 ```
 
-## 5 添加 tag 并提交
+## 05.添加 tag 并提交
 ```sh
 # 0.更新 CHANGELOG
 git-cliff -o CHANGELOG.md
