--- a/docs/05.VS Code 配置.md
+++ b/docs/05.VS Code 配置.md
@@ -1,9 +1,9 @@
-## 1 安装 VSCode 插件
+## 01.安装 VSCode 插件
 
 - rust-analyzer: Rust 语言支持
 - ~~crates: Rust 包管理，[市场](https://marketplace.visualstudio.com/items?itemName=serayuzgur.crates)已弃用~~
-- crates-io: Rust 包管理，[市场](https://marketplace.visualstudio.com/items?itemName=BarbossHack.crates-io)
-- Dependi: 依赖管理工具，[市场](https://marketplace.visualstudio.com/items?itemName=fill-labs.dependi)，存在bug
+- crates-io: Rust 包管理(crates 的 fork 版本)，[市场](https://marketplace.visualstudio.com/items?itemName=BarbossHack.crates-io)
+- Dependi: 依赖管理工具(crates 的升级版本，功能较多，有付费选项)，[市场](https://marketplace.visualstudio.com/items?itemName=fill-labs.dependi)
 - Even Better TOML: TOML 文件支持
 - Better Comments: 优化注释显示
 - Error Lens: 错误提示优化
@@ -19,7 +19,7 @@
 - YAML: YAML 文件支持
 - Crabviz: [Crabviz](https://github.com/chanhx/crabviz) 利用语言服务器协议生成交互式调用图，帮助您直观地探索源代码。[市场](https://marketplace.visualstudio.com/items?itemName=chanhx.crabviz)
 - CodeViz: CodeViz builds a visual map of your codebase for faster understanding and navigation [市场](https://marketplace.visualstudio.com/items?itemName=CodeViz.codeviz&ssr=false#overview)
-## 2 修改注释字体颜色
+## 02.修改注释字体颜色
 
 第二种方式是在 vscode 的设置页面中，搜索 "editor.tokenColorCustomizations" 选项，然后点击编辑器旁边的笔图标进行编辑，添加类似于以下的代码：
 
@@ -29,7 +29,7 @@
 }
 ```
 
-## 3 取消中文注释斜体
+## 03.取消中文注释斜体
 
 `C:\Users\$UserName$\.vscode\extensions\akamud.vscode-theme-onelight-2.3.0\themes`
 打开该目录下的 OneLight.json 文件，搜索该项 `"name": "Comment",`
