--- a/docs/01.Rust 安装.md
+++ b/docs/01.Rust 安装.md
@@ -1,4 +1,4 @@
-## 0 常用命令
+## 01.常用命令
 ```sh
 # 卸载 stable-x86_64-pc-windows-msvc
 rustup uninstall toolchain stable-x86_64-pc-windows-msvc
@@ -9,14 +9,20 @@ rustup toolchain install stable-x86_64-pc-windows-gnu
 # 设置 stable-x86_64-pc-windows-gnu 为默认环境（不推荐会出现编译失败的问题）
 rustup default stable-x86_64-pc-windows-gnu
 
-# 安装
+# 安装 Windows msvc 版本工具链条,推荐
 rustup toolchain install stable-msvc
 rustup default stable-msvc
 rustup uninstall stable-msvc
 
+# 安装 Windows gnu 版本工具链条
 rustup toolchain install stable-gnu
 rustup default stable-gnu
 rustup uninstall stable-gnu
+
+# Linux 安装 工具链
+rustup toolchain install stable
+# 安装 nightly
+rustup toolchain install nightly
 
 # 查看信息
 rustup show
@@ -32,7 +38,7 @@ rustup self uninstall
 
 [A high speed crates.io mirror](https://rsproxy.cn/)
 
-## 2 使用环境变量指定安装位置
+## 2 使用环境变量指定安装位置(Windows)
 安装的 `rust` 主要有两个文件夹(`.cargo` 和 `.rustup`)，而且会默认生成到 C 盘下。 但是，我们通过修改环境变量可以自定义安装路径
 
 ### 2.1 创建环境变量
@@ -42,14 +48,14 @@ RUSTUP_HOME="D:\Documents\.rustup"
 ```
 
 ### 2.2 添加到 path 路径下
-![alt text](../images/image-1.png)
+![alt text](files/image-1.png)
 
 > **该操作需要在安装 rust 之前完成**
 
 ### 2.3 确认配置生效
 运行 rust 安装程序，确实上面的配置已经生效
 
-![alt text](../images/image.png)
+![alt text](files/image.png)
 
 
 ## 3 提升 cargo 编译速度
@@ -130,8 +136,57 @@ https://www.nasm.us/
 C:\Develop\nasm
 ```
 
-## 完整 cargo config
+### 6 Windows MSYS 配置
 
+将 `C:\Program Files\Git\usr\bin` 添加到环境变量，Git for Windows 在其 `usr\bin` 目录中包含了许多 Unix/Linux 风格的工具和实用程序
+
+## 06.ArchLinux 安装
+
+```
+This will download and install the official compiler for the Rust
+programming language, and its package manager, Cargo.
+
+Rustup metadata and toolchains will be installed into the Rustup
+home directory, located at:
+
+ /home/ngt/.rustup
+
+This can be modified with the RUSTUP_HOME environment variable.
+
+The Cargo home directory is located at:
+
+ /home/ngt/.cargo
+
+This can be modified with the CARGO_HOME environment variable.
+
+The cargo, rustc, rustup and other commands will be added to
+Cargo's bin directory, located at:
+
+ /home/ngt/.cargo/bin
+
+This path will then be added to your PATH environment variable by
+modifying the profile files located at:
+
+ /home/ngt/.profile
+ /home/ngt/.bash_profile
+ /home/ngt/.bashrc
+ /home/ngt/.zshenv
+ /home/ngt/.config/fish/conf.d/rustup.fish
+
+You can uninstall at any time with rustup self uninstall and
+these changes will be reverted.
+
+Current installation options:
+
+
+  default host triple: x86_64-unknown-linux-gnu
+    default toolchain: stable (default)
+              profile: default
+ modify PATH variable: yes
+```
+## 07.完整 cargo config
+
+### 7.1 Windows
 ```toml
 [source.crates-io]
 replace-with = 'rsproxy-sparse'
@@ -152,4 +207,25 @@ rustc-wrapper = "D:\\Documents\\.cargo\\bin\\sccache"
 
 [target.x86_64-pc-windows-msvc]
 rustflags = ["-Ctarget-feature=+crt-static"]
+```
+
+
+### 7.3 Linux
+```toml
+[source.crates-io]
+replace-with = 'rsproxy-sparse'
+[source.rsproxy]
+registry = "https://rsproxy.cn/crates.io-index"
+[source.rsproxy-sparse]
+registry = "sparse+https://rsproxy.cn/index/"
+[registries.rsproxy]
+index = "https://rsproxy.cn/crates.io-index"
+
+[net]
+git-fetch-with-cli = true
+
+[build]
+target-dir = "/home/ngt/.cargo/target"
+rustc-wrapper = "/home/ngt/.cargo/bin/sccache"
+rustflags = ["-Ctarget-cpu=native"]
 ```
